...
  <string name="verification_code">Verification Code</string>
  <string name="your_id_secured">Your ID Secured !</string>
  <string name="your_account_passcode_is_created">Your account Passcode is created.</string>
  <string name="your_email_have_been_verified">Your email have been verified.</string>
  <string name="email">Email</string>
  <string name="photo">Photo</string>
  <string name="create_new_identity">Create new identity</string>
  <string name="recover_my_identity">Recover my identity</string>
  <string name="accept">Accept</string>
  <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
  <string name="last_modified_23_july_2017">Last modified 23 July 2017</string>
  <string name="last_modified_24_october_2018">Last modified 24 October 2018</string>
  <string name="please_paste_type_your_mnemonic_passphrase_to_recover_your_identity">Please paste/type your mnemonic passphrase \n to recover your identity</string>
  <string name="copy">Copy</string>
  <string name="continue_">Continue</string>
  <string name="paste_type_here">Paste/type here…</string>
  <string name="phrases_copied_to_buffer">Phrases copied to buffer</string>
  <string name="next">Next</string>
  <string name="phone_is_not_valid">Phone is not valid</string>
  <string name="error">error</string>
  <string name="error_">Error!</string>
  <string name="import_">Import</string>
  <string name="create_new">Create new</string>
  <string name="change_email_address">Change email address</string>
...
  <string name="icon">Icon</string>
  <string name="tutorial">Tutorial</string>
  <string name="fast_secure_access">Fast, Secure Access</string>
  <string name="manage_your_accounts">Manage your Accounts</string>
  <string name="verify_passphrase">Verify Passphrase</string>
  <string name="verify_email">Verify email</string>
  <string name="verify_number">Verify number</string>
  <string name="_90">+90</string>
  <string name="plus_character">+</string>
  <string name="sign_in_with_your_touch_id">Sign in with your Touch ID</string>
  <string name="touch_id_for_quot_kimlic_quot">Touch id for \"Kimlic\"</string>
  <string name="about_kimlic">About Kimlic</string>
  <string name="signup_recovery">Signup recovery</string>
...
