...
      android:hint="@string/phone_number"
      android:textColorHint="@color/lightBlue"
      app:hintTextAppearance="@style/WhiteTextInputLayout"
      tools:ignore="LabelFor">

      <EditText
        android:id="@+id/phoneEt"
        style="@style/KimlicEditText"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:digits="0123456789 ()+"
        android:focusable="true"
...

    </android.support.design.widget.TextInputLayout>

  </LinearLayout>

  <Button
    android:id="@+id/nextBt"
    android:layout_width="@dimen/content_width"
    android:layout_height="@dimen/button_height"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="32dp"
    android:background="@drawable/button_rounded_blue"
    android:elevation="@dimen/button_elevation"
...
