...
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/spacer"
    app:layout_constraintVertical_bias="0.416"/>

  <Button
    android:id="@+id/createBt"
    android:layout_width="@dimen/content_width"
    android:layout_height="@dimen/button_height"
    android:layout_marginBottom="16dp"
    android:background="@drawable/button_rounded_blue"
    android:elevation="@dimen/button_elevation"
    android:text="@string/create_new_identity"
...
